# veya

.kiro/specs/veya-mvp/: .config.kiro  design.md  requirements.md  tasks.md
proposal/: 01_init.md
src/: App.tsx  CaptureOverlay.tsx  i18n.ts  store.ts
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  learning_record.rs  lib.rs  main.rs  settings.rs  stronghold_store.rs  tts_client.rs
src-tauri/tests/: property_ai_completion_pipeline.rs  property_error_classification.rs  property_podcast_pipeline.rs  property_settings.rs  property_tts_routing.rs
src/components/: ActionBar.tsx  AudioPlayer.tsx  FloatingWindow.css  LearningPage.tsx  Pages.css  SettingsPage.tsx  StreamContent.tsx
src/locales/: en-US.json  zh-CN.json
veya/: package-lock.json  package.json
veya/src/: main.tsx
veya/src-tauri/: Cargo.toml  build.rs
veya/src-tauri/capabilities/: default.json
veya/src-tauri/src/: api_config.rs  cast_engine.rs  db.rs  error.rs  lib.rs  llm_client.rs  retry.rs  stronghold_store.rs  text_insight.rs  vision_capture.rs
veya/src-tauri/tests/: property_api_config.rs  property_api_key_roundtrip.rs  property_audio_storage_lifecycle.rs  property_cache_cleanup.rs  property_error_classification.rs  property_language_detection.rs  property_learning_record.rs  property_podcast_output_format.rs  property_retry.rs  property_word_frequency.rs
veya/src/components/: ApiConfigPage.tsx  FloatingWindow.tsx  SettingsPage.tsx
veya/src/tests/: property_ai_inferred_ranges.test.ts  property_floating_window_state.test.ts  (+1 more)
